--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -455,6 +455,10 @@
     <Compile Include="Migrations\201702061557351_DefaultDeliveryTime.Designer.cs">
       <DependentUpon>201702061557351_DefaultDeliveryTime.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702081502539_QuantityEnhancements.cs" />
+    <Compile Include="Migrations\201702081502539_QuantityEnhancements.Designer.cs">
+      <DependentUpon>201702081502539_QuantityEnhancements.cs</DependentUpon>
+    </Compile>
     <Compile Include="ObjectContextBase.SaveChanges.cs" />
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
@@ -833,6 +837,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201702061557351_DefaultDeliveryTime.resx">
       <DependentUpon>201702061557351_DefaultDeliveryTime.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702081502539_QuantityEnhancements.resx">
+      <DependentUpon>201702081502539_QuantityEnhancements.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
