Renaming some extension methods. Setting for Google Maps URL. Opening URL with working language code rather than always EN.

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -63,6 +63,7 @@
     <add key="sm:TaskSchedulerSweepInterval" value="1" />
     <add key="g:RecaptchaWidgetUrl" value="https://www.google.com/recaptcha/api.js" />
     <add key="g:RecaptchaVerifyUrl" value="https://www.google.com/recaptcha/api/siteverify" />
+    <add key="g:MapsUrl" value="http://maps.google.com/maps?hl={0}&amp;q={1}" />
     <!-- uncomment and set this to your store's task scheduler base url when the automatic url resolution fails (e.g. 'http://www.mystore.com/taskscheduler') -->
     <!--
     <add key="sm:TaskSchedulerBaseUrl" value="" />
