--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -459,6 +459,10 @@
     <Compile Include="Migrations\201702081502539_QuantityEnhancements.Designer.cs">
       <DependentUpon>201702081502539_QuantityEnhancements.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702091426405_ProductSellingAbroad.cs" />
+    <Compile Include="Migrations\201702091426405_ProductSellingAbroad.Designer.cs">
+      <DependentUpon>201702091426405_ProductSellingAbroad.cs</DependentUpon>
+    </Compile>
     <Compile Include="ObjectContextBase.SaveChanges.cs" />
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
@@ -840,6 +844,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201702081502539_QuantityEnhancements.resx">
       <DependentUpon>201702081502539_QuantityEnhancements.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702091426405_ProductSellingAbroad.resx">
+      <DependentUpon>201702091426405_ProductSellingAbroad.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
