--- a/src/Presentation/SmartStore.Web.Framework/packages.config
+++ b/src/Presentation/SmartStore.Web.Framework/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
-  <package id="Autofac" version="3.5.2" targetFramework="net451" />
-  <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net451" />
-  <package id="Autofac.WebApi" version="3.1.0" targetFramework="net45" />
+  <package id="Autofac" version="4.3.0" targetFramework="net452" />
+  <package id="Autofac.Mvc5" version="4.0.1" targetFramework="net452" />
+  <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net452" />
   <package id="AutoMapper" version="4.1.1" targetFramework="net451" />
   <package id="BundleTransformer.Core" version="1.9.138" targetFramework="net452" />
   <package id="BundleTransformer.Less" version="1.9.138" targetFramework="net452" />
@@ -13,15 +13,15 @@
   <package id="FluentValidation" version="5.6.2.0" targetFramework="net451" />
   <package id="JavaScriptEngineSwitcher.Core" version="2.2.0" targetFramework="net452" />
   <package id="LibSassHost" version="0.6.1" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Cors" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.1.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Cors" version="5.1.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.OData" version="5.1.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="5.2.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net451" />
   <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net451" />
