Resolves #271 Implement support for attribute images/icons

--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -463,6 +463,10 @@
     <Compile Include="Migrations\201702091426405_ProductSellingAbroad.Designer.cs">
       <DependentUpon>201702091426405_ProductSellingAbroad.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702141336312_VariantAttributeValuePictures.cs" />
+    <Compile Include="Migrations\201702141336312_VariantAttributeValuePictures.Designer.cs">
+      <DependentUpon>201702141336312_VariantAttributeValuePictures.cs</DependentUpon>
+    </Compile>
     <Compile Include="ObjectContextBase.SaveChanges.cs" />
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
@@ -847,6 +851,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201702091426405_ProductSellingAbroad.resx">
       <DependentUpon>201702091426405_ProductSellingAbroad.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702141336312_VariantAttributeValuePictures.resx">
+      <DependentUpon>201702141336312_VariantAttributeValuePictures.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
