Theming: prettified cart amount badges

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/theme.config
@@ -55,7 +55,7 @@
     <Var name="ShopBarBorderColor" type="Color">#abc2d1</Var>
     <Var name="ShopBarTextColor" type="Color">#696969</Var>
     <Var name="ShopBarIconColor" type="Color">#d2d2d2</Var>
-    <Var name="ShopBarLabel" type="Select#ShopBarLabels">label-warning</Var>
+    <Var name="shopbar-label" type="Select#shopbar-labels">warning</Var>
     
     <!-- Megamenu -->
     <Var name="DisplayNavbar" type="Boolean">true</Var>
@@ -160,14 +160,13 @@
   </Vars>
 
   <Selects>
-    <Select id="ShopBarLabels">
-      <Option>label</Option>
-      <Option>label-primary</Option>  
-      <Option>label-info</Option>
-      <Option>label-success</Option>
-      <Option>label-warning</Option>
-      <Option>label-important</Option>
-      <Option>label-inverse</Option>
+    <Select id="shopbar-labels">
+      <Option>default</Option>
+      <Option>primary</Option>  
+      <Option>info</Option>
+      <Option>success</Option>
+      <Option>warning</Option>
+      <Option>danger</Option>
     </Select>
 
     <Select id="GridSettings">
