--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -467,6 +467,10 @@
     <Compile Include="Migrations\201702141336312_VariantAttributeValuePictures.Designer.cs">
       <DependentUpon>201702141336312_VariantAttributeValuePictures.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702202112266_VariantAttributeAllowFiltering.cs" />
+    <Compile Include="Migrations\201702202112266_VariantAttributeAllowFiltering.Designer.cs">
+      <DependentUpon>201702202112266_VariantAttributeAllowFiltering.cs</DependentUpon>
+    </Compile>
     <Compile Include="ObjectContextBase.SaveChanges.cs" />
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
@@ -854,6 +858,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201702141336312_VariantAttributeValuePictures.resx">
       <DependentUpon>201702141336312_VariantAttributeValuePictures.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702202112266_VariantAttributeAllowFiltering.resx">
+      <DependentUpon>201702202112266_VariantAttributeAllowFiltering.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
