--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -436,6 +436,7 @@
     <Compile Include="Search\IndexDocument.cs" />
     <Compile Include="Search\IndexField.cs" />
     <Compile Include="Search\IndexProviderBase.cs" />
+    <Compile Include="Search\ISearchAlias.cs" />
     <Compile Include="Search\ISearchBits.cs" />
     <Compile Include="Search\ISearchEngine.cs" />
     <Compile Include="Search\Filter\ISearchFilter.cs" />
