--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -100,6 +100,16 @@
       </namespaces>
     </pages>
     <httpModules />
+    <anonymousIdentification
+      enabled="true"
+      cookieless="UseCookies"
+      cookieName="SMARTSTORE.ANONYMOUS"
+      cookieTimeout="100000"
+      cookiePath="/"
+      cookieRequireSSL="false"
+      cookieSlidingExpiration = "true"
+      cookieProtection="None"
+    />
   </system.web>
   <system.net>
     <connectionManagement>
