Theming (facets): Template selector, many fixes, better UI, a lot of CSS

--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -501,6 +501,9 @@
     <Compile Include="Search\ICatalogSearchService.cs" />
     <Compile Include="Search\LinqCatalogSearchService.cs" />
     <Compile Include="Search\CatalogSearchEvents.cs" />
+    <Compile Include="Search\Rendering\FacetTemplateProvider.cs" />
+    <Compile Include="Search\Rendering\IFacetTemplateProvider.cs" />
+    <Compile Include="Search\Rendering\IFacetTemplateSelector.cs" />
     <Compile Include="Security\AclService.cs" />
     <Compile Include="Security\EncryptionService.cs" />
     <Compile Include="Security\IAclService.cs" />
